--- a/.github/workflows/download_history.yml
+++ b/.github/workflows/download_history.yml
@@ -1,4 +1,5 @@
-name: 📥 Download Rolling 30d Candlestick History into Repo
+# .github/workflows/download_history.yml
+name: 📥 Download Candlestick History
 
 on:
   workflow_dispatch:
@@ -7,14 +8,15 @@ jobs:
   download:
     name: 🔄 ${{ matrix.symbol }} ｜ ${{ matrix.interval }}
     runs-on: ubuntu-latest
+
     strategy:
-      fail-fast: false
+      max-parallel: 1                      # <<< hier der Trick!
       matrix:
-        symbol: [BTCUSDT, ETHUSDT, BNBUSDT, XRPUSDT, SOLUSDT, ENAUSDT]
+        symbol:   [BTCUSDT, ETHUSDT, BNBUSDT, XRPUSDT, SOLUSDT, ENAUSDT]
         interval: [1m, 5m, 15m, 1h, 4h]
 
     steps:
-      - name: 🔀 Checkout repository
+      - name: 🔀 Checkout full history
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
@@ -24,18 +26,18 @@ jobs:
           git config user.name  "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-      - name: 🔧 Make download script executable
+      - name: 🔧 Make script executable
         run: chmod +x train/download_data_range.sh
 
-      - name: 📅 Calculate rolling 30d range
+      - name: 📅 Calculate rolling 30-day window
         id: dates
         run: |
           END=$(date -I -d "yesterday")
-          START=$(date -I -d "$END -30 days")
+          START=$(date -I -d "$END - 30 days")
           echo "start=$START" >> $GITHUB_OUTPUT
           echo "end=$END"     >> $GITHUB_OUTPUT
 
-      - name: 🌐 Download ${{ matrix.symbol }} / ${{ matrix.interval }} history
+      - name: 🌐 Download 30d rolling for ${{ matrix.symbol }} / ${{ matrix.interval }}
         run: |
           OUT=historical/${{ matrix.symbol }}/${{ matrix.interval }}/rolling
           mkdir -p "$OUT"
@@ -46,20 +48,19 @@ jobs:
             "${{ steps.dates.outputs.end }}" \
             "$OUT"
 
-      - name: 📂 Unzip & cleanup
+      - name: 📂 Unzip & cleanup (falls ZIPs)
         run: |
           DIR=historical/${{ matrix.symbol }}/${{ matrix.interval }}/rolling
           for z in "$DIR"/*.zip; do
             unzip -q "$z" -d "$DIR"
+            rm -f "$z"
           done
-          rm -f "$DIR"/*.zip
 
-      - name: 🔄 Commit & Push CSVs into repo
+      - name: 🔄 Commit & Push CSVs
         run: |
           git stash push --include-untracked -m "pre-pull stash"
-          git fetch origin main
-          git rebase origin/main
-          git stash pop || true
+          git pull --rebase origin main
+          git stash pop
 
           git add -A historical/${{ matrix.symbol }}/${{ matrix.interval }}/rolling
 
