--- a/.github/workflows/download_metrics.yml
+++ b/.github/workflows/download_metrics.yml
@@ -8,6 +8,7 @@ jobs:
     name: 🔄 ${{ matrix.metric }} ➡️ ${{ matrix.part }}
     runs-on: ubuntu-latest
     strategy:
+      max-parallel: 1
       fail-fast: false
       matrix:
         metric:
@@ -19,46 +20,36 @@ jobs:
           - part2
 
     steps:
-      # 1) Volles Repo auschecken
-      - name: Checkout repository
+      - name: 🔀 Checkout repository
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
-      # 2) Git-User
-      - name: Configure Git user
+      - name: ⚙️ Configure Git user
         run: |
           git config user.name  "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-      # 3) WORKER_URL ins ENV
       - name: Set WORKER_URL
         run: echo "WORKER_URL=${{ secrets.METRICS_WORKER_URL }}" >> $GITHUB_ENV
 
-      # 4) Script ausführbar machen
-      - name: Make script executable
+      - name: 🔧 Make script executable
         run: chmod +x metrics/download_metrics_range.sh
 
-      # 5) Datumsspanne berechnen
-      - name: Compute date range for ${{ matrix.part }}
+      - name: 📅 Compute date range for ${{ matrix.part }}
+        id: dates
         run: |
           if [ "${{ matrix.part }}" = "part1" ]; then
-            echo "START=2020-01-01" >> $GITHUB_ENV
-            echo "END=2022-01-01"   >> $GITHUB_ENV
+            START="2020-01-01"
+            END="2022-01-01"
           else
-            echo "START=2022-01-01"                     >> $GITHUB_ENV
-            echo "END=$(date -I -d "yesterday")"        >> $GITHUB_ENV
+            START="2022-01-01"
+            END="$(date -I -d "yesterday")"
           fi
+          echo "START=$START" >> $GITHUB_ENV
+          echo "END=$END"     >> $GITHUB_ENV
 
-      # 6) Alte JSONs löschen, damit wir wirklich alles neu holen
-      - name: Clear old JSONs
-        run: |
-          TARGET="metrics/${{ matrix.part }}/${{ matrix.metric }}"
-          rm -rf "$TARGET"
-          mkdir -p "$TARGET"
-
-      # 7) Download aller JSONs für genau diese Metrik
-      - name: Download metrics JSONs
+      - name: 📥 Download all metrics for ${{ matrix.metric }} / ${{ matrix.part }}
         run: |
           ./metrics/download_metrics_range.sh \
             "${{ matrix.metric }}" \
@@ -66,30 +57,29 @@ jobs:
             "$END" \
             "${{ matrix.part }}"
 
-      # 8) Smoke-Test einer Beispiel-Datei
-      - name: Verify a sample JSON
+      - name: 🔍 Validate a sample JSON (no hard fail)
         run: |
           SAMPLE="metrics/${{ matrix.part }}/${{ matrix.metric }}/BTCUSDT_${START}.json"
-          if jq -e '.error' "$SAMPLE" >/dev/null; then
-            echo "❌ API liefert error-Feld in $SAMPLE"
-            exit 1
+          if jq -e '.error' "$SAMPLE" >/dev/null 2>&1; then
+            echo "⚠️ API returned error in $SAMPLE – überspringe Fehler."
           else
             echo "✅ Sample JSON OK."
           fi
 
-      # 9) Commit & Push
-      - name: Commit & Push JSON into repo
+      - name: 🔄 Commit & Push JSONs into repo
         run: |
+          # Stash everything, pull & reapply
           git stash push --include-untracked -m "pre-pull stash"
           git fetch origin main
           git rebase origin/main
           git stash pop
 
+          # Stage nur die gerade heruntergeladenen JSONs
           git add -A metrics/${{ matrix.part }}/${{ matrix.metric }}
 
           if ! git diff --cached --quiet; then
-            git commit -m "feat(metrics): overwrite ${{ matrix.metric }} part=${{ matrix.part }} up to $(date -I) [skip ci]"
+            git commit -m "feat(metrics): add ${{ matrix.metric }} ${{ matrix.part }} up to $(date -I) [skip ci]"
             git push origin HEAD:main
           else
-            echo "→ No new JSONs for ${{ matrix.metric }} / ${{ matrix.part }}"
+            echo "→ No new metrics for ${{ matrix.metric }} / ${{ matrix.part }}"
           fi
