--- a/.github/workflows/download_metrics.yml
+++ b/.github/workflows/download_metrics.yml
@@ -1,12 +1,13 @@
-name: 📊 Download 4yr Metrics (6 Jobs)
+name: 📊 Download 4yr Metrics (3 Jobs, sequenziell)
 
 on:
   workflow_dispatch:
 
 jobs:
-  download:
-    name: 🔄 ${{ matrix.metric }} ➡️ ${{ matrix.part }}
+  download_metric:
+    name: 🔄 Download ${{ matrix.metric }} (part1 & part2)
     runs-on: ubuntu-latest
+
     strategy:
       fail-fast: false
       matrix:
@@ -14,9 +15,8 @@ jobs:
           - open_interest
           - funding_rate
           - liquidity
-        part:
-          - part1
-          - part2
+      # sorgt dafür, dass immer nur 1 Job gleichzeitig läuft
+      max-parallel: 1
 
     steps:
       - name: 🔀 Checkout repository (full history)
@@ -30,58 +30,50 @@ jobs:
       - name: 🛠 Make script executable
         run: chmod +x metrics/download_metrics_range.sh
 
-      - name: 📅 Compute date range for ${{ matrix.part }}
-        id: dates
+      - name: 📥 Download part1 for ${{ matrix.metric }}
         run: |
-          if [[ "${{ matrix.part }}" == "part1" ]]; then
-            echo "START=2020-01-01" >> $GITHUB_ENV
-            echo "END=2022-01-01"   >> $GITHUB_ENV
-          else
-            echo "START=2022-01-01" >> $GITHUB_ENV
-            echo "END=$(date -I -d 'yesterday')" >> $GITHUB_ENV
-          fi
+          START=2020-01-01
+          END=2022-01-01
+          ./metrics/download_metrics_range.sh "${{ matrix.metric }}" "$START" "$END" part1
 
-      - name: 🌐 Download metrics JSONs
+      - name: 📥 Download part2 for ${{ matrix.metric }}
         run: |
-          ./metrics/download_metrics_range.sh \
-            "${{ matrix.metric }}" \
-            "$START" \
-            "$END" \
-            "${{ matrix.part }}"
+          START=2022-01-01
+          END=$(date -I -d "yesterday")
+          ./metrics/download_metrics_range.sh "${{ matrix.metric }}" "$START" "$END" part2
 
-      - name: 🔍 Test sample JSON for errors
+      - name: 🔍 Sanity check sample JSON
         run: |
-          SAMPLE="metrics/${{ matrix.part }}/${{ matrix.metric }}/BTCUSDT_${START}.json"
+          SAMPLE="metrics/part1/${{ matrix.metric }}/BTCUSDT_2020-01-01.json"
           if jq -e '.error' "$SAMPLE" >/dev/null 2>&1; then
-            echo "⚠️ API returned error in $SAMPLE – skipping commit."
-            exit 0
+            echo "⚠️ API returned error in $SAMPLE"
+            exit 1
           else
             echo "✅ Sample JSON OK."
           fi
 
       - name: 🔄 Commit & Push JSON into repo
         run: |
-          # configure git
           git config user.name  "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-          # 1) stash everything (chmod + script changes etc)
+          # 1) stash alle lokalen Änderungen (chmod + etc)
           git stash push --include-untracked -m "pre-rebase stash"
 
-          # 2) bring local main up to date
+          # 2) fetch & rebase gegen remote
           git fetch origin main
           git rebase origin/main
 
-          # 3) reapply stashed changes (JSON + script)
+          # 3) stash pop (fügt die neuen JSONs wieder hinzu)
           git stash pop --index || true
 
-          # 4) stage only the freshly downloaded JSONs
-          git add -A metrics/${{ matrix.part }}/${{ matrix.metric }}
+          # 4) stage nur die beiden Part-Ordner für diese Metric
+          git add -A metrics/part1/${{ matrix.metric }} metrics/part2/${{ matrix.metric }}
 
-          # 5) commit & push if there is anything new
+          # 5) commit & push, falls es neue Dateien gibt
           if ! git diff --cached --quiet; then
-            git commit -m "feat(metrics): add ${{ matrix.metric }} part=${{ matrix.part }} up to $(date -I) [skip ci]"
+            git commit -m "feat(metrics): add ${{ matrix.metric }} parts up to $(date -I) [skip ci]"
             git push origin HEAD:main
           else
-            echo "→ No new ${ matrix.metric } for ${{ matrix.part }}"
+            echo "→ No new JSON for ${{ matrix.metric }}"
           fi
