--- a/.github/workflows/download_metrics.yml
+++ b/.github/workflows/download_metrics.yml
@@ -57,20 +57,20 @@ jobs:
           git config user.name  "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-          # 1) stash alle lokalen Änderungen (chmod + etc)
+          # 1) stash lokale Änderungen (chmod + usw.)
           git stash push --include-untracked -m "pre-rebase stash"
 
-          # 2) fetch & rebase gegen remote
+          # 2) fetch & rebase gegen remote/main
           git fetch origin main
           git rebase origin/main
 
-          # 3) stash pop (fügt die neuen JSONs wieder hinzu)
+          # 3) stash pop (bringt die neuen JSONs zurück)
           git stash pop --index || true
 
-          # 4) stage nur die beiden Part-Ordner für diese Metric
+          # 4) stage nur die Ordner für diese Metric
           git add -A metrics/part1/${{ matrix.metric }} metrics/part2/${{ matrix.metric }}
 
-          # 5) commit & push, falls es neue Dateien gibt
+          # 5) commit & push falls neue Dateien
           if ! git diff --cached --quiet; then
             git commit -m "feat(metrics): add ${{ matrix.metric }} parts up to $(date -I) [skip ci]"
             git push origin HEAD:main
