--- a/.github/workflows/download_metrics.yml
+++ b/.github/workflows/download_metrics.yml
@@ -5,7 +5,6 @@ on:
 
 jobs:
   download_metrics:
-    # Job-Name zeigt Matrix-Kombination in der Actions‐UI an
     name: Download ${{ matrix.metric }} | ${{ matrix.part }} | ${{ matrix.symbol }}
     runs-on: ubuntu-latest
 
@@ -14,7 +13,6 @@ jobs:
         metric: [open_interest, funding_rate, liquidity]
         part:   [part1, part2]
         symbol: [BTCUSDT, ETHUSDT, BNBUSDT, XRPUSDT, SOLUSDT, ENAUSDT]
-      # alle Kombinationen laufen parallel
 
     env:
       PROXY_URL: https://crypto-signal-app.onrender.com
@@ -36,7 +34,6 @@ jobs:
       - name: Metrics herunterladen
         shell: bash
         run: |
-          # Part-Definition
           if [[ "${{ matrix.part }}" == "part1" ]]; then
             START="2020-01-01"
             END="2022-12-31"
@@ -61,10 +58,10 @@ jobs:
           git config user.name "${GIT_USER}"
           git config user.email "${GIT_EMAIL}"
 
-          # Stage nur das eine Symbol-Verzeichnis
-          git add metrics/${{ matrix.part }}/${{ matrix.metric }}/${{ matrix.symbol }}
+          # Füge alle neuen/geänderten JSONs für dieses Symbol ein
+          git add metrics/${{ matrix.part }}/${{ matrix.metric }}/${{ matrix.symbol }}_*.json
 
-          # Wenn Änderungen vorhanden, pull+rebase, commit und push
+          # Prüfen, ob Dateien zum Commit stehen
           if [[ -n "$(git status --porcelain)" ]]; then
             git pull --rebase --autostash origin main
             git commit -m "chore(metrics): update ${{ matrix.metric }}/${{ matrix.part }}/${{ matrix.symbol }} [skip ci]"
